# Kriptomatte-Phase-1

./: Kriptomatte Sample.png~  kripto_decode.py  kripto_logger.py  kripto_utils.py  pwsh_gitupdate.ps1  pyproject.toml  readme.md  readme_sc.md  sample.exr  setup.py
kriptomatte/: kripto_decode.py  kripto_logger.py  pyproject.toml
src/kriptomatte/: __init__.py  kripto_color.py  kripto_datatypes.py  kripto_decode.py  kripto_logger.py  kripto_utils.py
