[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kriptomatte"
version = "0.0.1"
authors = [
  { name="Tempestas", email="kousakiaya@outlook.com" },
]
description = "Decode Cryptomattes in EXR file to PNG masks"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning"
]

[project.urls]
Homepage = "https://github.com/GrandArth/Kriptomatte-Phase-1"
Issues = "https://github.com/GrandArth/Kriptomatte-Phase-1/issues"